--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
 
     <div class="container mt-4 bg-light p-4">
         <div class="row ">
-          <div class="col-md-8 p-4"> <h1 >Text here</h1></div>
-          <div class="col-md p-4">
+          <div class="col-4 align-content-center"> <h1 class=" fs-5 ">Text here</h1></div>
+          <div class="col-2 ">
             <img src="images/Best_Social_Media_Management_Software_-_article_image.jpg" alt="" class="img-fluid">
           </div>
-          <div class="col-md p-4">
+          <div class="col-2">
             <img src="images/adobestock_224947026_fmt.png" alt=""  class="img-fluid">
           </div>
-          <div class="col-md p-4">
+          <div class="col-2">
             <img src="images/adobestock_224947026_fmt.png" alt=""  class="img-fluid">
           </div>
-          <div class="col-md p-4">
+          <div class="col-2">
             <img src="images/Best_Social_Media_Management_Software_-_article_image.jpg" alt=""  class="img-fluid">
           </div>
             
